# AMT-Client-Backend

./: .gitignore  README.md  ping-social.sh  render.yaml
.github/workflows/: deploy-pages.yml  update-badge.yml  update-gallery.yml  upload-cape.yml  vote.yml
api/v1/version/: branches.json
api/v1/version/builds/: legacy.json  stable.json
api/v1/version/builds/nextgen/: release.json
api/v1/version/builds/stable/: release.json
api/v1/version/changelog/: 1.json  2.json  3.json
api/v1/version/launch/: 1.json  2.json  3.json
api/v1/version/mods/1.21.11/: fabric.json
api/v1/version/mods/26.1.2/: fabric.json
api/v3/: blog.json
data/: backgrounds.json  gallery.json
data/capes/: example.json
data/users/: example.json
server/: Cargo.toml  Dockerfile
server/src/: main.rs
